--- a/index.html
+++ b/index.html
@@ -3,25 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to My GitHub Page</title>
+    <title>Cheng(Cyrus)Zhang's Homepage</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to My GitHub Page</h1>
+        <h1>Cyrus Zhang</h1>
+        <p>Software Developer | Data Scientist | Content Creator</p>
     </header>
-    <section>
-        <h2>About Me</h2>
-        <p>Hi, I'm [Your Name]! I'm a developer with a passion for [your interests or skills]. You can check out my projects below.</p>
-    </section>
-    <section>
-        <h2>Projects</h2>
+
+    <nav>
         <ul>
-            <li><a href="https://github.com/[Username]/[Project]">Project 1</a> - A brief description of what this project does.</li>
-            <li><a href="https://github.com/[Username]/[Project]">Project 2</a> - A brief description of what this project does.</li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#publications">Publications</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
-    </section>
+    </nav>
+
+    <main>
+        <section id="about">
+            <h2>About Me</h2>
+            <p>Hello! I'm Cyrus, a passionate software developer and graduate student in NC State University. I love to explore new technologies and solve challenging problems.</p>
+        </section>
+
+        <section id="projects">
+            <h2>Projects</h2>
+            <ul>
+                <li><a href="#">Project One</a> - A brief description of Project One.</li>
+                <li><a href="#">Project Two</a> - A brief description of Project Two.</li>
+            </ul>
+        </section>
+
+        <section id="publications">
+            <h2>Publications</h2>
+            <ul>
+                <li><a href="#">Publication One</a> - A brief description of Publication One.</li>
+                <li><a href="#">Publication Two</a> - A brief description of Publication Two.</li>
+            </ul>
+        </section>
+
+        <section id="contact">
+            <h2>Contact Me</h2>
+            <p>Email: <a href="daniel.cheng243@gmail.com">daniel.cheng243@gmail.com</a></p>
+            <p>LinkedIn: <a href="#">linkedin-profile</a></p>
+        </section>
+    </main>
+
     <footer>
-        <p>Contact me on <a href="https://github.com/[Username]">GitHub</a>.</p>
+        <p>© 2024 Cyrus Zhang. All rights reserved.</p>
     </footer>
 </body>
 </html>
