--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <header>
-        <h1>Cyrus Zhang</h1>
-        <p>Software Developer | Data Scientist | Content Creator</p>
+        <h1>Cheng(Cyrus)Zhang</h1>
+        <p>Computer Science graduate student</p>
     </header>
 
     <nav>
@@ -48,10 +48,12 @@
             <p>Email: <a href="daniel.cheng243@gmail.com">daniel.cheng243@gmail.com</a></p>
             <p>LinkedIn: <a href="#">linkedin-profile</a></p>
         </section>
+
+       <section id="footer">
+            <p>© 2024 Cyrus Zhang. All rights reserved.</p>
+       </section>
     </main>
 
-    <footer>
-        <p>© 2024 Cyrus Zhang. All rights reserved.</p>
-    </footer>
+
 </body>
 </html>
