--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
     <main>
         <section id="about">
             <h2>About Me</h2>
-            <p>Hello! I'm Cyrus, a passionate software developer and graduate student in NC State University. I love to explore new technologies and solve challenging problems.</p>
-        </section>
+            Hello! I'm Cyrus, a graduate student in the Department of Computer Science at North Carolina State University. I graduated with a bachelor's degree in Software Engineering from Nankai University in China.        </section>
 
         <section id="projects">
             <h2>Projects</h2>
