--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
 </head>
 <body>
     <header>
+        <div class="profile-container">
+            <img src="image1.png" alt="Cyrus" class="profile-pic">
+        </div>
         <h1>Cheng(Cyrus)Zhang</h1>
         <p>Computer Science graduate student</p>
+
     </header>
 
     <nav>
