--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="profile-container">
-            <img src="image1.png" alt="Cyrus" class="profile-pic">
+            <img src="image2.png" alt="Cyrus" class="profile-pic">
         </div>
         <h1>Cheng(Cyrus)Zhang</h1>
         <p>Computer Science graduate student</p>
@@ -28,33 +28,42 @@
     <main>
         <section id="about">
             <h2>About Me</h2>
-            Hello! I'm Cyrus, a graduate student in the Department of Computer Science at North Carolina State University. I graduated with a bachelor's degree in Software Engineering from Nankai University in China.        </section>
-
+            Hello! I'm Cyrus, an incoming graduate student in the <a href="https://www.csc.ncsu.edu">Department of Computer Science
+            </a> at <a href="https://www.ncsu.edu">North Carolina State University</a>. 
+            I graduated with a bachelor's degree in Software Engineering from 
+            <a href="https://en.nankai.edu.cn">Nankai University</a> in 2024.
+           <p>Fun fact: I love singing, and my two favorite artists are <a href="https://store.oliviarodrigo.com">Olivia Rodrigo</a> and <a href="https://www.whitneyhouston.com/">Whitney Houston</a>.</p> 
+        </section>
         <section id="projects">
             <h2>Projects</h2>
+            
             <ul>
+                <!-- 
                 <li><a href="#">Project One</a> - A brief description of Project One.</li>
                 <li><a href="#">Project Two</a> - A brief description of Project Two.</li>
+                注释此处 -->
+                <li>comming soon</li>
             </ul>
         </section>
 
         <section id="publications">
             <h2>Publications</h2>
             <ul>
+                 <!-- 
                 <li><a href="#">Publication One</a> - A brief description of Publication One.</li>
                 <li><a href="#">Publication Two</a> - A brief description of Publication Two.</li>
+                注释此处 -->
+                <li>comming soon</li>
+
             </ul>
         </section>
 
         <section id="contact">
             <h2>Contact Me</h2>
-            <p>Email: <a href="daniel.cheng243@gmail.com">daniel.cheng243@gmail.com</a></p>
-            <p>LinkedIn: <a href="#">linkedin-profile</a></p>
+            <p>Email: <a href="mailto:daniel.cheng243@gmail.com">daniel.cheng243@gmail.com</a></p>
+            <p>LinkedIn: <a href="#">coming soon</a></p>
         </section>
 
-       <section id="footer">
-            <p>© 2024 Cyrus Zhang. All rights reserved.</p>
-       </section>
     </main>
 
 
