--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cheng(Cyrus)Zhang's Homepage</title>
+    <head>
+        <meta name="description" content="Personal website of Cheng (Cyrus) Zhang | 张铖, a computer science student at NCSU.">
+        <title>Cheng (Cyrus) Zhang | 张铖 - NCSU Computer Science</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
