--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
         <section id="contact">
             <h2>Contact Me</h2>
-            <p>Email: <a href="mailto:daniel.cheng243@gmail.com">daniel.cheng243@gmail.com</a></p>
+            <p>Email: <a href="mailto:czhang48@ncsu.edu">czhang48@ncsu.edu</a></p>
             <p>LinkedIn: <a href="#">coming soon</a></p>
         </section>
 
